# functional_drive

./: .gitignore  Cargo.toml
src/: learn_burn.rs  lib.rs
src/nn_backend/: batcher.rs  dataloader.rs  interface.rs  mod.rs  model.rs  trainer.rs
