[package]
name = "functional_drive"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib","cdylib"]


[dependencies]
nbdkit = "0.3.0"
libc = "0.2.15"
burn = {version= "0.13.2", features= ["wgpu", "train", "vision"]}
serde = "1.0.204"
